k8s-atifacts/opa/opa-runtime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"opa-runtime-deployment","namespace":"apim-demo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"opa-integration"}},"template":{"metadata":{"labels":{"app":"opa-integration"}},"spec":{"containers":[{"args":["run","--server"],"image":"openpolicyagent/opa:0.29.4","imagePullPolicy":"Always","name":"opa-runtime","ports":[{"containerPort":8181,"protocol":"TCP"}]}]}}}}
  creationTimestamp: "2021-06-01T14:43:34Z"
  generation: 4
  name: opa-runtime-deployment
  namespace: apim-demo
  resourceVersion: "65774143"
  uid: 44219ed4-6313-48fd-b91b-71ffc5ce6821
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: opa-integration
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: opa-integration
    spec:
      containers:
      - args:
        - run
        - --server
        image: openpolicyagent/opa:0.29.4
        imagePullPolicy: Always
        name: opa-runtime
        ports:
        - containerPort: 8181
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
