k8s-atifacts/opa/opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"opa-runtime-service","namespace":"apim-demo"},"spec":{"ports":[{"name":"port-1","port":8181,"targetPort":8181}],"selector":{"app":"opa-integration"},"type":"ClusterIP"}}
  creationTimestamp: "2021-06-01T14:43:34Z"
  name: opa-runtime-service
  namespace: apim-demo
  resourceVersion: "2435349"
  uid: 65e1178e-3cc1-45d2-84c5-54da3c550ee2
spec:
  clusterIP: 10.8.4.28
  clusterIPs:
  - 10.8.4.28
  ports:
  - name: port-1
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: opa-integration
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
